[package]
name = "proxy-rs"
version = "0.1.0"
authors = ["ArthurYu <yuya008@aliyun.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "2.33.1"
tokio = { version = "0.2", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
bytes = "0.5"
env_logger = "0.7"
log = "0.4"
